--- a/ElementosJSP/web/index.html
+++ b/ElementosJSP/web/index.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Ejemplo Scriptlets JSP</title>
         <meta charset="UTF-8">
-        <title>Ejemplo de Elementos JSPs</title>
     </head>
     <body>
-        <h1>Ejemplo de Expresiones</h1>
+        <h1>Ejemplo de Scriplets con JSPs</h1>
         <br>
-        <a href="expresiones.jsp">Link al JSP de Expresiones</a>
         <br>
-
-        <!--Formulario -->
-        <h4>Formulario HTML</h4>
-
-        <form name="forma1" action="procesaFormulario.jsp">
-
-            Usuario: <input type="text" name="usuario">
-            <br>
-            Password: <input type="password" name="password">
+        <a href="scriptlets.jsp">Ejemplos de Scriplets</a>
+        <br>
+        <br>
+        <!-- formulario -->
+        <form action="fondoColor.jsp">
+            Proporciona el color de fondo (ej. red, blue, etc)
+            <input type="text" name="colorFondo">
             <br>
             <input type="submit" value="Enviar">
         </form>
+
     </body>
 </html>
